--- a/locale/ja/LC_MESSAGES/meerk40t.po
+++ b/locale/ja/LC_MESSAGES/meerk40t.po
@@ -8168,7 +8168,7 @@ msgid "Board"
 msgstr ""
 
 #: meerk40t/lihuiyu/device.py:116
-msgid "Select the board to use. This has an effects the speedcodes used."
+msgid "Select the board to use. This affects the speedcodes used."
 msgstr "使用するボードを選択する。これは使用するスピードコードに影響します。"
 
 #: meerk40t/lihuiyu/device.py:120
