--- a/locale/nl/LC_MESSAGES/meerk40t.po
+++ b/locale/nl/LC_MESSAGES/meerk40t.po
@@ -8207,7 +8207,7 @@ msgid "Board"
 msgstr ""
 
 #: meerk40t/lihuiyu/device.py:116
-msgid "Select the board to use. This has an effects the speedcodes used."
+msgid "Select the board to use. This affects the speedcodes used."
 msgstr ""
 "Kies het te gebruiken bord. Dit heeft een effect op de gebruikte "
 "snelheidscodes."
