--- a/locale/pt_BR/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_BR/LC_MESSAGES/meerk40t.po
@@ -11933,7 +11933,7 @@ msgid "Board Setup"
 msgstr "Configuración de la placa"
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:488
-msgid "Select the board to use. This has an effects the speedcodes used."
+msgid "Select the board to use. This affects the speedcodes used."
 msgstr "Seleccione la placa a utilizar. Esto afecta los códigos de velocidad utilizados."
 
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:498
