--- a/locale/pt_PT/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_PT/LC_MESSAGES/meerk40t.po
@@ -8213,7 +8213,7 @@ msgid "Board"
 msgstr ""
 
 #: meerk40t/lihuiyu/device.py:116
-msgid "Select the board to use. This has an effects the speedcodes used."
+msgid "Select the board to use. This affects the speedcodes used."
 msgstr ""
 "Seleccionar o quadro a utilizar. Isto tem um efeito nos códigos de "
 "velocidade utilizados."
