--- a/locale/zh/LC_MESSAGES/meerk40t.po
+++ b/locale/zh/LC_MESSAGES/meerk40t.po
@@ -8140,7 +8140,7 @@ msgid "Board"
 msgstr "板"
 
 #: meerk40t/lihuiyu/device.py:116
-msgid "Select the board to use. This has an effects the speedcodes used."
+msgid "Select the board to use. This affects the speedcodes used."
 msgstr "选择要使用的板。这会影响使用的速度代码。"
 
 #: meerk40t/lihuiyu/device.py:120
